[package]
name = "advent_of_code_2022"
version = "0.1.0"
edition = "2021"
authors = [ "Luis Merino <mail@luismerino.name>" ]
description = "Open source terminal arcade game with audio - based off of the classic Sega 'Columns'"
homepage = "https://github.com/Rendez/advent_of_code_2022"
repository = "https://github.com/Rendez/advent_of_code_2022/tree/main/advent_of_code_2022"
readme = "README.md"
license = "MIT OR Apache-2.0"

[[bin]]
name = "day_1"
path = "src/day_1/bin/main.rs"
